[package]
name = "blenzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
num-traits = "0.2"
serenity = "0.10.9"
reqwest = {version="0.11", features=["json"]}
serde = "1.0.130"
chrono = "0.4"
maplit = "1.0.2"
tokio = {version= "1.10.1", features=["full"]}