[package]
name = "blenzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
num-traits = "0.2"
serenity = {version="0.10.9", features=["collector"]}
chrono = {version="0.4", features=["serde"]}
tokio = {version= "1.10.1", features=["macros", "rt-multi-thread"]}
mal = {path="../mal"}