[package]
name = "blenzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
rand = "0.8.4"
num-traits = "0.2"
chrono = {version="0.4", features=["serde"]}
tokio = {version= "1.10.1", features=["macros", "rt-multi-thread"]}
env_logger = "0.9.0"
log = "0.4.14"
mal = {path="../mal"}

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features=["collector", "unstable_discord_api", "builder", "model"]