[package]
name = "blenzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
rand = "0.8.4"
num-traits = "0.2"
env_logger = "0.9.0"
log = "0.4.14"

[dependencies.tokio]
version = "1.10.1"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serenity]
version = "0.10.9"
features=["collector", "unstable_discord_api", "builder", "model", "voice", "rustls_backend", "client", "standard_framework"]

[dependencies.songbird]
version = "0.2.0"
features = ["serenity-rustls"]

[dependencies.mal]
path = "../mal"