[package]
name = "mal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
num-traits = "0.2"
reqwest = {version="0.11", features=["json"]}
serde = {version="1.0.130", features=["derive"]}
chrono = {version="0.4", features=["serde"]}
maplit = "1.0.2"
tokio = {version= "1.10.1", features=["full"]}